--- a/src/WelcomeSite.tsx.save.2
+++ b/src/WelcomeSite.tsx.save.2
@@ -442,7 +442,7 @@ const incrementVisitCount = (id: string) => {
         
         if (token) {
           try {
-            const backendResponse = await fetch("http://192.168.0.162:5000/api/items?limit=30", {
+            const backendResponse = await fetch("http://localhost:5000/api/items?limit=30", {
               headers: {
                 "Authorization": `Bearer ${token}`
               }
